k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortener-keygenerator
  labels:
    app: shortener-keygenerator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shortener-keygenerator
  template:
    metadata:
      labels:
        app: shortener-keygenerator
    spec:
      containers:
        - name: shortener-keygenerator
          image: soserdev/shortener-keygenerator:0.0.1  # Built from your Dockerfile
#          ports:
#            - containerPort: 8080
